--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run src/generate-rank.ts"
+    "start": "bun run src/generate-rank.ts",
+    "export-as-csv": "bun run src/export-as-csv.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.4.0-pre.5",
-    "drizzle-orm": "^0.29.1"
+    "@types/fs-extra": "^11.0.4",
+    "drizzle-orm": "^0.29.1",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "bun-types": "latest",
