copied convert script to this repo

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-# Caches 
+# Caches
 
 .cache
 
@@ -176,3 +176,5 @@ dist
 
 me22.db
 exports
+*.db
+*.sql
