--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "fs-extra": "^11.2.0"
   },
   "devDependencies": {
-    "bun-types": "latest",
+    "@types/bun": "^1.0.0",
     "drizzle-kit": "^0.20.6"
   },
   "peerDependencies": {
