--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "start": "bun run src/generate-rank.ts",
-    "export-as-csv": "bun run src/export-as-csv.ts"
+    "export-as-csv": "bun run src/export-as-csv.ts",
+    "export-top-results": "bun run src/export-top-results.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.4.0-pre.5",
@@ -13,7 +14,7 @@
     "fs-extra": "^11.2.0"
   },
   "devDependencies": {
-    "@types/bun": "^1.0.0",
+    "@types/bun": "latest",
     "drizzle-kit": "^0.20.6"
   },
   "peerDependencies": {
