--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "export-as-csv": "bun run src/export-as-csv.ts",
     "export-top-results": "bun run src/export-top-results.ts",
     "export-marks-sheet": "bun run src/export-marks-sheet.ts",
-    "export-summary-report-data": "bun run src/export-summary-report-data.ts"
+    "export-summary-report-data": "bun run src/export-summary-report-data.ts",
+    "export-results": "bun run src/export-results.ts"
   },
   "dependencies": {
     "@libsql/client": "^0.4.0-pre.5",
